[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprite/cat/Idle (10).png" type="Texture" id=1]
[ext_resource path="res://sprite/cat/Dead (6).png" type="Texture" id=2]
[ext_resource path="res://sprite/cat/Dead (8).png" type="Texture" id=3]
[ext_resource path="res://sprite/cat/Dead (9).png" type="Texture" id=4]
[ext_resource path="res://sprite/cat/Idle (6).png" type="Texture" id=5]
[ext_resource path="res://sprite/cat/Dead (5).png" type="Texture" id=6]
[ext_resource path="res://sprite/cat/Idle (2).png" type="Texture" id=7]
[ext_resource path="res://sprite/cat/Idle (7).png" type="Texture" id=8]
[ext_resource path="res://sprite/cat/Dead (10).png" type="Texture" id=9]
[ext_resource path="res://sprite/cat/Dead (3).png" type="Texture" id=10]
[ext_resource path="res://sprite/cat/Idle (4).png" type="Texture" id=11]
[ext_resource path="res://sprite/cat/Dead (4).png" type="Texture" id=12]
[ext_resource path="res://sprite/cat/Idle (3).png" type="Texture" id=13]
[ext_resource path="res://sprite/cat/Dead (1).png" type="Texture" id=14]
[ext_resource path="res://sprite/cat/Idle (9).png" type="Texture" id=15]
[ext_resource path="res://sprite/cat/Idle (5).png" type="Texture" id=16]
[ext_resource path="res://sprite/cat/Idle (1).png" type="Texture" id=17]
[ext_resource path="res://sprite/cat/Dead (2).png" type="Texture" id=18]
[ext_resource path="res://sprite/cat/Idle (8).png" type="Texture" id=19]
[ext_resource path="res://sprite/cat/Dead (7).png" type="Texture" id=20]
[ext_resource path="res://sprite/cat/Walk (6).png" type="Texture" id=21]
[ext_resource path="res://sprite/cat/Walk (7).png" type="Texture" id=22]
[ext_resource path="res://sprite/cat/Walk (1).png" type="Texture" id=23]
[ext_resource path="res://sprite/cat/Walk (2).png" type="Texture" id=24]
[ext_resource path="res://sprite/cat/Walk (3).png" type="Texture" id=25]
[ext_resource path="res://sprite/cat/Walk (9).png" type="Texture" id=30]
[ext_resource path="res://sprite/cat/Walk (5).png" type="Texture" id=31]
[ext_resource path="res://sprite/cat/Walk (4).png" type="Texture" id=34]
[ext_resource path="res://sprite/cat/Walk (10).png" type="Texture" id=35]
[ext_resource path="res://sprite/cat/Walk (8).png" type="Texture" id=39]
[ext_resource path="res://script/enemy.gd" type="Script" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 20 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 30 ), ExtResource( 35 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.6787, 41.5413 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.4143, 47.5345 )

[node name="Enemy_Cat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 99
script = ExtResource( 41 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.23688, 0.23688 )
frames = SubResource( 1 )
animation = "walk"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.49491, 5.99323 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 2

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -6.36778, 4.8695 )
shape = SubResource( 3 )

[connection signal="area_entered" from="sides_checker" to="." method="_on_sides_checker_area_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
